@@ -3,3 +3,4 @@ ban.txt
 telemetry.json
 imports/__pycache__/*
 __pycache__/*
+tests/*
